--- a/text/abbreviations.tex
+++ b/text/abbreviations.tex
@@ -107,6 +107,7 @@
 \item[CPA] Chirped Pulse Amplification
 \item[FDTD] Finite Difference Time Domain
 \item[HB] Hole Boring
+\item[HED] High-Energy-Density
 \item[HHG] High Harmonic Generation
 \item[OHREX] ORION High Resolution X-ray
 \item[PIC] Particle-In-Cell
@@ -124,6 +125,7 @@
 	\acro{CPA}{Chirped Pulse Amplification}
 	\acro{FDTD}{Finite Difference Time Domain}
 	\acro{HB}{Hole boring}
+	\acro{HED}{High-Energy-Density}
 	\acro{HHG}{High Harmonic Generation}
 	\acro{OHREX}{ORION High Resolution X-ray}
 	\acro{PIC}{Particle-In-Cell}
