--- a/text/ch1-intro.tex
+++ b/text/ch1-intro.tex
@@ -9,82 +9,102 @@ There is no one who loves pain itself, who seeks after it and wants to have it, 
 
 \minitoc
 
-\section{A plan}
-Actually the very first thing to say will be the stuff about light i think, about diagnostic tools essentially always being about controlling the various properties of light (ie electromagnetic waves)
+\section{High-energy-density physics}
+We sit on the verge of the exa-scale revolution both in terms of computing \cite{kotheExascaleComputingUnited2019} and laser power. With rapid adoption of the pioneering advancements of Chirped Pulse Amplification (CPA) by Strickland and Mourou \cite{stricklandCompressionAmplifiedChirped1985} and of Optical Parametric Chirped Pulse Amplification \cite{rossOpticalParametricChirped2000}, multi-petawatt facilities have now been commissioned and built across the globe and plans for sub-exawatt facilities are underway. Figure \ref{fig:intro_lasersystems} details the parameter space accessible by current and proposed facilities \cite{stricklandCompressionAmplifiedChirped1985, fourmauxPedestalCleaningHigh2011, wang085PWLaser2017, tiscarenoOhioStateUniversity2020, sung42PW202017, rossGenerationTerawattPulses2000, yangMultiterawattLaserSystem2002, witte2006source, stoecklHighEnergyPetawattProject2006, lozhkarevCompact56Petawatt2007, herrmannGenerationSubthreecycle162009, andriukaitis90GWPeak2011, zhaoGeneration120GW2013, hoppsOverviewLaserSystems2013, hoppsOverviewLaserSystems2013, thire10MJ5cycle2015, yinHighefficiencyOpticalParametric2016, galesExtremeLightInfrastructure2018, OMEGAFacility, renCompactDoublepassRaman2008, lanciaExperimentalEvidenceShort2010, lanciaSignaturesSelfSimilarRegime2016, marquesJouleLevelHighEfficiencyEnergy2019, thebergeTunableUltrashortLaser2006, trushinSub10fsSupercontinuumRadiation2007, ohIntenseTerahertzGeneration2013, horioGenerationSub17Fs2014, takahashiGeneration10uJCoherent2002, goulielmakisSingleCycleNonlinearOptics2008, skantzakisCoherentContinuumExtreme2009, ferrariHighenergyIsolatedAttosecond2010, takahashiAttosecondNonlinearOptics2013, popmintchevUltravioletSurpriseEfficient2015, nomuraAttosecondPhaseLocking2009, bierbachGeneration10Relativistic2012, heisslerMultimJHarmonicEmission2015, yeungExperimentalObservationAttosecond2017, jahnIntenseIsolatedAttosecond2019, rusEfficientHighbrightnessSoftxray1997, sebbanFullCharacterizationHighgain2000, rusMultimillijouleHighlyCoherent2002, zeitounHighintensityHighlyCoherent2004, wangHighBrightnessInjectionSeededSoftXRayLaser2006, rohringerAtomicInnershellXray2012, ayvazyanFirstOperationFreeelectron2006, ackermannOperationFreeelectronLaser2007, emmaFirstLasingOperation2010, FlashFreeElectronLaser, FlashFreeElectronLaser, FELIXLaboratoryOverview, FELIXLaboratoryOverview, FELIXLaboratoryOverview, kneipObservationSynchrotronRadiation2008, kneipBrightSpatiallyCoherent2010, juEnhancementXraysGenerated2012, chenBrightBetatronXray2013, wangQuasimonoenergeticLaserplasmaAcceleration2013, coleLaserwakefieldAcceleratorsHard2015, wenzQuantitativeXrayPhasecontrast2015, taphuocAllopticalComptonGammaray2012, chenMeVEnergyRaysInverse2013, tsaiCompactTunableCompton2015, polyanskiyPicosecondPulseAmplification2011, haberbergerFifteenTerawattPicosecond2010, glowniaAmplification193nmFemtosecond1992, kandoEnhancementPhotonNumber2009, obenschainHighenergyKryptonFluoride2015, trinesSimulationsEfficientRaman2011, trinesSimulationsEfficientRaman2011, kawanakaConceptualDesignSubexawatt2016, tajimaMarriage20keVSuperconducting2018, NetElectricityConsumption}, clearly, there is no indication of wavering interest or support for the field of \ac{HED} physics. 
+% TODO: \usepackage{graphicx} required
+\begin{figure}
+	\centering
+	\includegraphics[width=\linewidth]{figures/intro/laser_systems}
+	\caption[Laser systems across the globe, both commissioned and theorised.]{A by no means exhaustive plot of laser systems across the globe, both commissioned and theorised \cite{stricklandCompressionAmplifiedChirped1985, fourmauxPedestalCleaningHigh2011, wang085PWLaser2017, tiscarenoOhioStateUniversity2020, sung42PW202017, rossGenerationTerawattPulses2000, yangMultiterawattLaserSystem2002, witte2006source, stoecklHighEnergyPetawattProject2006, lozhkarevCompact56Petawatt2007, herrmannGenerationSubthreecycle162009, andriukaitis90GWPeak2011, zhaoGeneration120GW2013, hoppsOverviewLaserSystems2013, hoppsOverviewLaserSystems2013, thire10MJ5cycle2015, yinHighefficiencyOpticalParametric2016, galesExtremeLightInfrastructure2018, OMEGAFacility, renCompactDoublepassRaman2008, lanciaExperimentalEvidenceShort2010, lanciaSignaturesSelfSimilarRegime2016, marquesJouleLevelHighEfficiencyEnergy2019, thebergeTunableUltrashortLaser2006, trushinSub10fsSupercontinuumRadiation2007, ohIntenseTerahertzGeneration2013, horioGenerationSub17Fs2014, takahashiGeneration10uJCoherent2002, goulielmakisSingleCycleNonlinearOptics2008, skantzakisCoherentContinuumExtreme2009, ferrariHighenergyIsolatedAttosecond2010, takahashiAttosecondNonlinearOptics2013, popmintchevUltravioletSurpriseEfficient2015, nomuraAttosecondPhaseLocking2009, bierbachGeneration10Relativistic2012, heisslerMultimJHarmonicEmission2015, yeungExperimentalObservationAttosecond2017, jahnIntenseIsolatedAttosecond2019, rusEfficientHighbrightnessSoftxray1997, sebbanFullCharacterizationHighgain2000, rusMultimillijouleHighlyCoherent2002, zeitounHighintensityHighlyCoherent2004, wangHighBrightnessInjectionSeededSoftXRayLaser2006, rohringerAtomicInnershellXray2012, ayvazyanFirstOperationFreeelectron2006, ackermannOperationFreeelectronLaser2007, emmaFirstLasingOperation2010, FlashFreeElectronLaser, FlashFreeElectronLaser, FELIXLaboratoryOverview, FELIXLaboratoryOverview, FELIXLaboratoryOverview, kneipObservationSynchrotronRadiation2008, kneipBrightSpatiallyCoherent2010, juEnhancementXraysGenerated2012, chenBrightBetatronXray2013, wangQuasimonoenergeticLaserplasmaAcceleration2013, coleLaserwakefieldAcceleratorsHard2015, wenzQuantitativeXrayPhasecontrast2015, taphuocAllopticalComptonGammaray2012, chenMeVEnergyRaysInverse2013, tsaiCompactTunableCompton2015, polyanskiyPicosecondPulseAmplification2011, haberbergerFifteenTerawattPicosecond2010, glowniaAmplification193nmFemtosecond1992, kandoEnhancementPhotonNumber2009, obenschainHighenergyKryptonFluoride2015, trinesSimulationsEfficientRaman2011, trinesSimulationsEfficientRaman2011, kawanakaConceptualDesignSubexawatt2016, tajimaMarriage20keVSuperconducting2018, NetElectricityConsumption} to provide an overview of the parameter space currently and soon to be accessible. The experimental result obtained at the ORION laser facility \cite{hoppsOverviewLaserSystems2013} is presented, and will be discussed in detail in chapter \ref{ch:3-ORION}. The dashed orange line is the accompanying theoretical prediction. The red dashed line indicates the parameter space accessible via the methods discussed in this thesis when coupled with a sub-etawatt Raman amplified laser beam. Such a beam would provide intensities in the water window many orders of magnitude beyond that currently accessible in state-of-the-art facilities. }
 
-sections to include
-start with the laser and our entrance into the multi-petawatt regime with no signs of stopping - ref 40 in alex savin thesis - it looks like that is saying huge growth in laser power check that and maybe write in thesis but don't include the figure. Also include description of CPA and OPCPA
-what is a plasma
-modelling plasma with PIC codes
-intense lasers and absorption mechanisms?? yes for sure but dont do all just those just below ZVP
-simulation units and similarity parameter
-Frames of reference - lab, sim, ablating front sruface of plasma
+	\label{fig:intro_lasersystems}
+\end{figure}
 
-what is the story? Based on first section by Alex after the abstract
-Plasma is ubiquitous in our known universe and plasma provides us huge opportunities as a tool to improve our lives
-(From chen) what we can see in the sky is a result of that stuff being in the plasma state.
-Lasers can do so much now and are only getting more powerful all the time thanks to CPA and since developments (discuss)
-Simulataneously our ability to understand the physics has been aided by an explosion in computing power (peter HEDP paper)
-In this thesis we discuss some of the opportunities that relativistic laser plasma physics offers us with solid density targets - note that note about solids v gases at this point. 
-Perhaps even before the debye length, define what we mean by the temperature of the plasma??
+\ac{HED} physics is the laboratory study of the behaviour of matter with a pressure above \qty{10}{GPa}, approximately one million atmospheres and containing free electrons not confined to a solid state \cite{drakeFocusHighEnergy2014}, typically in the plasma state of matter. \ac{HED} conditions are found for a vast range of  densities and temperatures (from zero to a million million Kelvin) operating in both the quantum and relativistic realms. The applications are equally diverse, including but not limited to inertial confinement fusion, particle acceleration for scientific or medical purposes and light sources for diagnostic tools. Ubiquitous in the natural universe, beyond our solar system, all that can be observed in the sky is radiation emitted from \ac{HED} plasmas \cite{chen}.
 
-An unused statement about ion immobility
-Assume for now that the ion-electron mass ratio is infinite, that is to say the ions are approximately immobile for the timescales under consideration, generally true for a fair few relativistic laser pulse cycles (In later sections the mobility of plasma ions will prove very important but for now this is ignored.).
+This thesis concerns itself with a specific interaction, that of a high-power short-pulse laser incident on a flat solid target. Through the process discussed in this thesis, using state-of-the-art 10 PW laser facilities such as \cite{galesExtremeLightInfrastructure2018}, electron bunches and light pulse of unprecedented charge and brightness can be produced, both with attosecond duration, thus uncovering new avenues for attosecond resolution diagnostics and to access the Schwinger limit. Seemingly counter-intuitively, as the laser power increases, via relativistic effects and for certain conditions, greater coherency in the electron dynamics can be observed and the signals amplified. The red dashed line of figure \ref{fig:intro_lasersystems} could be accessed using next generation sub-etawatt facilities. Before delving into this fascinating phenomenon, the remainder of this chapter will provide some of the relevant background information. Chapter \ref{ch:2-zvp} introduces the Zero Vector Potential of attosecond absorption in this laser-solid interaction. The following chapter discusses the associated process of Surface High Harmonic Generation and the results of a recent experiment at the ORION laser facility where the absolute intensity of individual X-ray harmonics was measured and compared to the theory.
+
+%{A plan}
+%Actually the very first thing to say will be the stuff about light i think, about diagnostic tools essentially always being about controlling the various properties of light (ie electromagnetic waves)
+
+%sections to include
+%start with the laser and our entrance into the multi-petawatt regime with no signs of stopping - ref 40 in alex savin thesis - it looks like that is saying huge growth in laser power check that and maybe write in thesis but don't include the figure. Also include description of CPA and OPCPA
+%what is a plasma
+%modelling plasma with PIC codes
+%intense lasers and absorption mechanisms?? yes for sure but dont do all just those just below ZVP
+%simulation units and similarity parameter
+%Frames of reference - lab, sim, ablating front sruface of plasma
+
+%what is the story? Based on first section by Alex after the abstract
+%Plasma is ubiquitous in our known universe and plasma provides us huge opportunities as a tool to improve our lives
+%(From chen) what we can see in the sky is a result of that stuff being in the plasma state.
+%Lasers can do so much now and are only getting more powerful all the time thanks to CPA and since developments (discuss)
+%Simulataneously our ability to understand the physics has been aided by an explosion in computing power (peter HEDP paper)
+%In this thesis we discuss some of the opportunities that relativistic laser plasma physics offers us with solid density targets - note that note about solids v gases at this point. 
+%Perhaps even before the debye length, define what we mean by the temperature of the plasma??
+
+%An unused statement about ion immobility
+%Assume for now that the ion-electron mass ratio is infinite, that is to say the ions are approximately immobile for the timescales under consideration, generally true for a fair few relativistic laser pulse cycles (In later sections the mobility of plasma ions will prove very important but for now this is ignored.).
 
 \section{\label{sec:plasma_def}The definition of a plasma}
-As outlined in F. Chen's definitive textbook `Introduction to Plasma Physics and Controlled Fusion' \cite{chen20116}, a plasma must fulfil three criteria, namely,
+As outlined in F. Chen's definitive textbook `Introduction to Plasma Physics and Controlled Fusion' \cite{chenIntroductionPlasmaPhysics2016}, a plasma must fulfil three criteria, namely,
 
 \begin{enumerate}
 	\item Ionisation: a plasma must consist of both charged and neutral particles, of course this alone cannot define a plasma, any gas will contain some degree of ionisation;
 	\item Quasineutrality: while locally there can be (often extreme) electromagnetic forces and charge concentrations at work, over the length scales of the plasma, such forces are screened out and the plasma bulk remains net neutral in charge;
-	\item Collective behaviour: unlike in a gas where collisions dominate, the particles in a plasma generate electromagnetic fields that interact at a distance and thus a particle's motion depends not only on its immediate viscinity but on the surrounding plasma conditions, indeed often it is the so-called `collisionless' plasmas where collisions can be safely neglected that are of most interest, as is the focus of this thesis.
+	\item Collective behaviour: unlike in a gas, where collisions will dominate the dynamics, the particles in a plasma generate electromagnetic fields that interact at a distance and thus a particle's motion depends not only on its immediate vicinity but on the surrounding plasma conditions, indeed often it is the so-called `collisionless' plasmas where collisions can be safely neglected that are of most interest, as is the focus of this thesis.
 \end{enumerate}
 
+These conditions can be quantitatively described by the Debye length, the plasma parameter and the plasma frequency as laid out in the following sections.
+
 \subsection{\label{sec:debye_length}The Debye length}
-The Debye length describes the extent to which a plasma can shield electromagnetic fields within and so remain quasineutral. Consider an infinitely extending plasma with a test charge placed at some point, then what would be the potential $\phi(\mathbf{x})$? If the plasma had no kinetic energy, the charged particles would arrange themself immediately ajacent to the test charge and once this equilibrium state was reached there would be no electromagnetic fields present. Realistically the plasma will have some temperature, likely a very large temperature and so some particles will be able to escape the potential of the test charge and thus leak electromagnetic fields into the plasma bulk. Poisson's equation reads
+The Debye length describes the extent to which a plasma can shield electromagnetic fields within and so remain quasineutral. Consider an infinitely extending plasma with a test charge placed at some point, then what would be the potential $\phi(\mathbf{x})$ around it? If the plasma had no kinetic energy, the charged particles would arrange themself immediately ajacent to the test charge and once this equilibrium state was reached there would be no electromagnetic fields present. More realistically, the plasma will have some temperature, likely a very large temperature and so some particles will be able to escape the potential of the test charge and thus leak electromagnetic fields into the plasma bulk. Poisson's equation reads
 \begin{equation}\label{eq:poisson}
-	\epsilon_0\nabla^2\phi = -e(Zn_i - n_e),
+	\epsilon_0\nabla^2\phi = -e(Zn_\mathrm{i} - n_\mathrm{e}),
 \end{equation}
-where $\epsilon_0 = \qty{8.854e-12}{F.m^{-1}}$ is the permittivity of free space, $e = \qty{1.602e-19}{C}$ is the charge of an electron, $Z$ is the plasma ion charge in units of $e$ and $n_i$ and $n_e$ are the number densities of plasma ions and electrons.
+where $\epsilon_0 = \qty{8.854e-12}{F.m^{-1}}$ is the permittivity of free space, $e = \qty{1.602e-19}{C}$ is the charge of an electron, $Z$ is the plasma ion charge in units of $e$ and $n_\mathrm{i}$ and $n_\mathrm{e}$ are the number densities of plasma ions and electrons.
 
 Since the electrons are significantly more mobile than the ions due to their lower mass, it is in general the electrons and not the ions that respond to the test charge and the ions can be assumed to provide a constant background of positive charge density.
 If the number density of electrons follows a Boltzmann temperature distribution in the presence of a potential energy $-e\phi$, then
 \begin{equation}\label{eq:nj_boltzmann}
-	n_e= n_{e,0}e^{e\phi/KT_e},
+	n_\mathrm{e}= n_{\mathrm{e},0}e^{e\phi/KT_\mathrm{e}},
 \end{equation}
-where $n_{e,0}$ is the electron number density far from the test charge, $n_i = n_{e,0}/Z$ and $KT_e$ is the electron temperature. Note that in plasmas it is very common for different species to have differing temperatures depending on the mechanism for energy absorption and the timescales for collisions compared to the timescale of the study.
+where $n_{\mathrm{e},0}$ is the electron number density far from the test charge, $n_\mathrm{i} = n_{\mathrm{e},0}/Z$ and $KT_\mathrm{e}$ is the electron temperature. Note that in plasmas it is very common for different species to have differing temperatures depending on the mechanism for energy absorption and the timescales for collisions compared to the timescale of the study.
 
-Substituting equation \ref{eq:nj_boltzmann} into equation \ref{eq:poisson} and Taylor expanding the exponential term in the limit that the plasma is weakly coupled ($e\phi << KT_e$), obtains 
+Substituting equation \ref{eq:nj_boltzmann} into equation \ref{eq:poisson} and Taylor expanding the exponential term in the limit that the plasma is weakly coupled ($e\phi << KT_\mathrm{e}$), 
 \begin{equation}\label{eq:poisson_debye2}
-	\nabla^2\phi = \frac{\phi}{\lambda_D^2},
+	\nabla^2\phi = \frac{\phi}{\lambda_\mathrm{D}^2},
 \end{equation}
 where
 \begin{equation}\label{eq:debye}
-	\lambda_D \equiv \sqrt{\frac{\epsilon_0KT_e}{n_ee^2}},
+	\lambda_\mathrm{D} \equiv \sqrt{\frac{\epsilon_0KT_\mathrm{e}}{n_\mathrm{e}e^2}},
 \end{equation}
-is the \textit{Debye length} and describes the thickness of the charge sheath surrounding the test charge. For quasineutrality to hold for the plasma bulk, its spatial dimensions must extend beyond a few Debye lengths.
+is the \textit{Debye length} and describes the thickness of the charge sheath surrounding the test charge. For quasineutrality to hold for the plasma bulk, its spatial dimensions, $L$, must extend beyond a few Debye lengths, \textit{i.e.}
+\begin{equation}
+	L \gg \lambda_D.
+\end{equation}
 
 \subsection{\label{sec:plasma_parameter}The plasma parameter}
-In order for the above description to be statistically valid, there must be a large number of charged particles within the shielding sheath. The number of particles within the \text{Debye sphere} can be computed as
+In order for the derivation of section \ref{sec:debye_length} to be statistically valid, there must be a large number of charged particles within the shielding sheath. The number of particles within the \textit{Debye sphere} is
 \begin{equation}\label{eq:plasma_parameter}
-	N_D = \frac{4}{3}\pi\lambda_D^3n.
+	N_\mathrm{D} = \frac{4}{3}\pi\lambda_\mathrm{D}^3n,
 \end{equation}
-Note that, as discussed above, in most cases it is most suitable to choose the number density $n$ to be the number density of electrons. To ensure the plasma is suitably ionised (criterion 1) and that the plasma engages in collective behaviour (criterion 3),
+where, $N_\mathrm{D}$ is the \textit{plasma parameter}. Note that, as discussed above, in most cases it is most suitable to choose the number density $n$ to be the number density of electrons, $n_\mathrm{e}$. To ensure the plasma is suitably ionised (criterion 1) and that the plasma engages in collective behaviour (criterion 3),
 \begin{equation}\label{eq:plasma_parameter_condition}
-	N_D >>> 1.
+	N_\mathrm{D} \ggg 1.
 \end{equation}
 \subsection{\label{sec:plasma_frequency}Collisionality and the plasma frequency}
-Collective behaviour not only depends on the ability for large numbers of particles to interact via electromagnetic forces but that these forces dominate over collisions in describing particle trajectories. Taking $\omega$ as the typical frequency of plasma oscillations and $\tau$ as the average time between collisions, for a plasma (as opposed to a gas) must satisfy
+Collective behaviour not only depends on the ability for large numbers of particles to interact via electromagnetic forces but also that these forces dominate over collisions in describing particle trajectories. Taking $\omega$ as the typical frequency of plasma oscillations and $\tau$ as the average time between collisions, for a plasma (as opposed to a gas)
 \begin{equation}\label{eq:plasma_frequency_condition}
-	\omega\tau > 1.
+	\omega\tau > 1
 \end{equation}
-It now remains to determine what is the typical frequency of collisions in a given plasma. While the types of plasma waves and their associated frequencies of oscillation are multitudinous, the characteristic frequency, the \textit{plasma frequency}, $\omega_p$, is the most straightforward. It describes the response of electrons to charge imbalances within an infinite uniform plasma at rest in the absence of magnetic fields or temperature fluctuations. As noted in section \ref{sec:debye_length}, the ions provide a constant backgorund of positive charge.
+is required. It now remains to determine what is the typical frequency of collisions in a given plasma. While the types of plasma waves and their associated frequencies of oscillation are multitudinous, the characteristic frequency, the \textit{plasma frequency}, $\omega_\mathrm{p}$, is the most straightforward. It describes the response of electrons to charge imbalances within an infinite uniform plasma at rest in the absence of magnetic fields or temperature fluctuations. As noted in section \ref{sec:debye_length}, the ions provide a constant background of positive charge.
 
-Consider an semi-infinite plasma existing for $x>0$, with electron density $n_e$ and ion density $n_e/Z$ of charge state $Z$\footnote{This description has direct relevance to the Zero Vector Potential mechanism which will be made clear later.}. Suppose the electron fluid is displaced by some perfectly isotropic force into the plasma bulk a distance $(\Delta x) \hat{\mathbf{x}}$ as in figure \ref{fig:introplasmafrequency}. 
+Consider an semi-infinite plasma existing for $x>0$, with electron density $n_\mathrm{e}$ and ion density $n_\mathrm{e}/Z$ of charge state $Z$\footnote{This description has direct relevance to the Zero Vector Potential mechanism which will be made clear in chapter \ref{ch:2-zvp}.}. Suppose the electron fluid is displaced by some perfectly isotropic force into the plasma bulk a distance $(\Delta x) \hat{\mathbf{x}}$ as in figure \ref{fig:introplasmafrequency}. 
 \begin{figure}
 	\centering
 	\includegraphics[width=0.7\linewidth]{figures/intro/intro_plasma_frequency}
-	\caption{Diagram to illustrate the plasma frequency derivation.THIS FIGURE NEEDS E POINTING THE OTHER WAY}
+	\caption[Diagram to illustrate the derivation of the plasma frequency.]{The electrons of a semi-infinite plasma are displaced inwards by some external force leaving in their wake an uncompensated space charge of `immobile' positive ions. By constructing a Gaussian surface along the dashed line, using Gauss' Law, the electric field associated with the positive space charge can be calculated.}
 	\label{fig:introplasmafrequency}
 \end{figure}
 The total charge of displaced electrons within a surface area of $\sigma$ is 
@@ -93,15 +113,15 @@ The total charge of displaced electrons within a surface area of $\sigma$ is
 \end{equation}
 Applying Gauss' law to the surface detailed in figure \ref{fig:introplasmafrequency}, the uncompensated charge leads to 
 \begin{equation}\label{eq:intro_E}
-	-\sigma E\hat{\mathbf{x}}= \frac{Q}{\epsilon_0}\hat{\mathbf{x}} = -\frac{en_e\sigma\Delta x}{\epsilon_0}\hat{\mathbf{x}}
+	-\sigma E\hat{\mathbf{x}}= \frac{Q}{\epsilon_0}\hat{\mathbf{x}} = -\frac{en_\mathrm{e}\sigma\Delta x}{\epsilon_0}\hat{\mathbf{x}}
 \end{equation}
 at the electron surface. By the Lorentz force, the displaced electrons will experience a restoring force, $-eE\hat{\mathbf{x}}$, perpendicular to the surface due to the electron-ion charge imbalance. The equation of motion for electrons on that surface is therefore
 \begin{equation}\label{eq:intro_sho}
-	m_e\frac{\mathrm{d}^2\Delta x}{\mathrm{d}t^2} = -eE = -\frac{e^2n_e}{\epsilon_0}\Delta x.
+	m_e\frac{\mathrm{d}^2\Delta x}{\mathrm{d}t^2} = -eE = -\frac{e^2n_\mathrm{e}}{\epsilon_0}\Delta x.
 \end{equation}
 Equation \ref{eq:intro_sho} clearly describes a simple harmonic oscillator with a characteristic frequency given by the plasma frequency,
 \begin{equation}
-	\omega_p = \sqrt{\frac{e^2n_e}{m_e \epsilon_0}}.
+	\omega_\mathrm{p} = \sqrt{\frac{e^2n_\mathrm{e}}{m_\mathrm{e} \epsilon_0}}.
 \end{equation}
 
 
@@ -115,7 +135,7 @@ The Lawson-Woodward theorem states that there can be no net electron energy gain
 	\item No electro- or magnetostatic fields are present;
 	\item Non-linear effects are neglected.
 \end{enumerate}
-Several of these will be applicable to the various accelerations of electrons considered. It is this final condition that is most damning, throughout this thesis the ultra-relativistic laser pulses under consideration ensure non-linear effects cannot be neglected. It is indeed such non-linearities that are of interest.
+Several of these will be applicable to the various accelerations of electrons considered. It is this final condition that is most damning to the application of the theorem. Throughout this thesis the ultra-relativistic laser pulses under consideration ensure non-linear effects cannot be neglected. It is indeed such non-linearities that are of most interest.
 
 \section{Relativistic effects}
 The descriptor `Relativistic' is applied liberally in this thesis. When applied to electromagnetic fields or laser pulses it refers to 
@@ -137,15 +157,15 @@ where
 The field will accelerate an electron to a $\beta = 0.99$, corresponding to $\gamma \approx 7$, in less than 1 \% of a corresponding laser pulse wavelength.
 
 \subsection{Conservation of generalised transverse momentum}\label{sec:intro_conservation-generalised-mometum}
-Consider a holonomic system of $N$ relativistic particles under the influence of electromagnetic forces. A particle $j$ with charge $e_j$ and mass $m_\mathrm{j}$ experiences a scalar potential,
+Consider a holonomic system of $N$ relativistic particles under the influence of electromagnetic forces. A particle $j$ with charge $e_j$ and mass $m_j$ experiences a scalar potential,
 \begin{equation}
 		V_{j} = e_j(\phi - \mathbf{A} \cdot \mathbf{v}_{j})
 \end{equation}
 and hence the system is described by the Lagrangian
 \begin{equation}
-	\mathcal{L} = \sum^N_{j=1}\left( - m_\mathrm{j}c^2\sqrt{1-\beta^2_\mathrm{j}} - e_j(\phi - \mathbf{A} \cdot \mathbf{v}_\mathrm{j}) \right),
+	\mathcal{L} = \sum^N_{j=1}\left( - m_jc^2\sqrt{1-\beta^2_\mathrm{j}} - e_j(\phi - \mathbf{A} \cdot \mathbf{v}_j) \right),
 \end{equation}
-where $\beta^2_j = \mathbf{v}_\mathrm{j}\cdot\mathbf{v}_\mathrm{j} /c^2$ and $\mathbf{v}_j = \mathrm{d}\mathbf{x}_j/\mathrm{d}t$ \cite{goldsteinClassicalMechanics2013}.
+where $\beta^2_j = \mathbf{v}_{j}\cdot\mathbf{v}_{j} /c^2$ and $\mathbf{v}_j = \mathrm{d}\mathbf{x}_j/\mathrm{d}t$ \cite{goldsteinClassicalMechanics2013}.
 The generalised momentum corresponding to coordinate $x_j$ is
 \begin{equation}
 	p_{j,x} = \frac{\partial L}{\partial \dot{x}_j} = m_j\dot{x}_j + e_jA_x,
