Lots of intro bits

--- a/references.bib
+++ b/references.bib
@@ -479,6 +479,19 @@
   file = {/Users/timmis/Zotero/storage/HAQDEY6F/Chen et al. - 2013 - Bright betatron X-ray radiation from a laser-drive.pdf}
 }
 
+@book{chenIntroductionPlasmaPhysics2016,
+  title = {Introduction to {{Plasma Physics}} and {{Controlled Fusion}}},
+  author = {Chen, Francis F.},
+  year = {2016},
+  publisher = {{Springer International Publishing}},
+  address = {{Cham}},
+  doi = {10.1007/978-3-319-22309-4},
+  urldate = {2023-09-26},
+  isbn = {978-3-319-22308-7 978-3-319-22309-4},
+  langid = {english},
+  file = {/Users/timmis/Zotero/storage/DT4KITLZ/Chen - 2016 - Introduction to Plasma Physics and Controlled Fusi.pdf}
+}
+
 @article{chenMeVEnergyRaysInverse2013,
   title = {{{MeV-Energy X Rays}} from {{Inverse Compton Scattering}} with {{Laser-Wakefield Accelerated Electrons}}},
   author = {Chen, S. and Powers, N. D. and Ghebregziabher, I. and Maharjan, C. M. and Liu, C. and Golovin, G. and Banerjee, S. and Zhang, J. and Cunningham, N. and Moorti, A. and Clarke, S. and Pozzi, S. and Umstadter, D. P.},
