--- a/text/abbreviations.tex
+++ b/text/abbreviations.tex
@@ -55,14 +55,14 @@
 \item[$N_\mathrm{D}$] Number of particles within the Debye sphere $= \frac{4}{3}\pi \lambda^3_\mathrm{D}n$
 \item[$\omega$] Angular frequency of an oscillation or low energy photon
 \item[$\omega_\mathrm{L}$] Laser pulse angular frequency
-\item[$\omega_\mathrm{P}$] Plasma frequency $= \sqrt{\frac{e^2n_\mathrm{e}}{m_\mathrm{e}\epsilon_0}}$
+\item[$\omega_\mathrm{p}$] Plasma frequency $= \sqrt{\frac{e^2n_\mathrm{e}}{m_\mathrm{e}\epsilon_0}}$
 \item[$\phi$] Angle of laser polarisation out of the plane of interaction or scalar electromagnetic potential
 \item[$\mathbf{p}$] Three-momentum
 \item[$\mathbf{P}$] Pressure
 \item[$\mathbf{P}^\mu$] Four-momentum = $(U/c, \mathbf{p})$
 \item[$Q$] Charge
 \item[$\rho$] Density
-\item[$r_\mathrm{L}$] Relativistic Larmor radius  = $\frac{\gamma m_\mathrm{e} v}{e|mathbf{B}|}$
+\item[$r_\mathrm{L}$] Relativistic Larmor radius  = $\frac{\gamma m_\mathrm{e} v}{e|\mathbf{B}|}$
 \item[$\mathbf{r}$] Radial vector
 \item[$\hat{\mathbf{r}}$] Radial unit vector
 \item[$R$] Rate
