--- a/text/appendix-1.tex
+++ b/text/appendix-1.tex
@@ -9,6 +9,21 @@ The heart of animals is the foundation of their life, the sovereign of everythin
 
 \minitoc
 
+\section{Lorentz transformations of electromagnetic fields}\label{sec:app_lorentzEM}
+The Lorentz transformations for electromagnetic field components parallel, $\parallel$, and perpendicular, $\perp$, to a frame of reference boost of velocity $\mathbf{v}$ are \cite{steaneRelativityMadeRelatively2012}
+\begin{equation}
+	\mathbf{E}'_\parallel = \mathbf{E}_\parallel,
+\end{equation}
+\begin{equation}
+	\mathbf{B}'_\parallel = \mathbf{B}_\parallel,
+\end{equation}
+\begin{equation}
+	\mathbf{E}'_\perp = \gamma_\mathbf{v}(\mathbf{E}_\perp + \mathbf{v} \times \mathbf{B}),
+\end{equation}
+\begin{equation}
+	\mathbf{B}'_\perp = \gamma_\mathbf{v}(\mathbf{B}_\perp - \mathbf{v} \times \mathbf{E}/c^2).
+\end{equation}
+
 \section{The headlight effect}\label{sec:app_headlight}
 The headlight effect describes the beaming of an isotropically emitting source travelling at some velocity relative to an observer. Consider the geometry of figure \ref{fig:zvp_ablatingfront} with the source (the laser pulse) travelling at an angle $2\theta$ to the observer (in this case, the ablating front). A photon with energy $E$ emitted from the rest frame of the source (the laboratory frame in this case) has a 4-momentum
 \begin{equation}
