--- a/text/abbreviations.tex
+++ b/text/abbreviations.tex
@@ -109,6 +109,7 @@
 \item[HB] Hole Boring
 \item[HED] High-Energy-Density
 \item[HHG] High Harmonic Generation
+\item[HPC] High Performance Computing
 \item[OHREX] ORION High Resolution X-ray
 \item[PIC] Particle-In-Cell
 \item[QED] Quantum Electro-Dynamics
@@ -127,6 +128,7 @@
 	\acro{HB}{Hole boring}
 	\acro{HED}{High-Energy-Density}
 	\acro{HHG}{High Harmonic Generation}
+	\acro{HPC}{High Performance Computing}
 	\acro{OHREX}{ORION High Resolution X-ray}
 	\acro{PIC}{Particle-In-Cell}
 	\acro{QED}{Quantum Electro-Dynamics}
