--- a/references.bib
+++ b/references.bib
@@ -279,6 +279,13 @@
   file = {/Users/timmis/Zotero/storage/YL27DHSM/Bell et al. - 1997 - Fast-electron transport in high-intensity short-pu.pdf}
 }
 
+@article{bennett2017users,
+  title = {Users Manual for the {{EPOCH PIC}} Codes},
+  author = {Bennett, Keith and Brady, Chris and Schmitz, Holger and Ridgers, Christopher and Arber, Tony and Evans, Roger and Bell, Tony},
+  year = {2017},
+  journal = {University of Warwick}
+}
+
 @article{bierbachGeneration10Relativistic2012,
   title = {Generation of 10 {\emph{{$\mu$}}} {{W}} Relativistic Surface High-Harmonic Radiation at a Repetition Rate of 10 {{Hz}}},
   author = {Bierbach, J and R{\"o}del, C and Yeung, M and Dromey, B and Hahn, T and Pour, A Galestian and Fuchs, S and Paz, A E and Herzer, S and Kuschel, S and J{\"a}ckel, O and Kaluza, M C and Pretzler, G and Zepf, M and Paulus, G G},
@@ -920,6 +927,21 @@
   file = {/Users/timmis/Zotero/storage/S7DYRHLE/Esarey et al. - 2009 - Physics of laser-driven plasma-based electron acce.pdf}
 }
 
+@article{esirkepovExactChargeConservation2001,
+  title = {Exact Charge Conservation Scheme for {{Particle-in-Cell}} Simulation with an Arbitrary Form-Factor},
+  author = {Esirkepov, {\relax T.Zh}.},
+  year = {2001},
+  month = apr,
+  journal = {Computer Physics Communications},
+  volume = {135},
+  number = {2},
+  pages = {144--153},
+  issn = {00104655},
+  doi = {10.1016/S0010-4655(00)00228-9},
+  urldate = {2023-09-28},
+  langid = {english}
+}
+
 @misc{ExawattCentreExtreme,
   title = {Exawatt {{Centre}} for {{Extreme Light Studies}} ({{XCELS}})},
   howpublished = {xcels.iapras.ru}
@@ -979,6 +1001,23 @@
   file = {/Users/timmis/Zotero/storage/EAWDBMSM/PhysRevSTAB.6.034202.pdf}
 }
 
+@incollection{fonsecaOSIRISThreeDimensionalFully2002,
+  title = {{{OSIRIS}}: {{A Three-Dimensional}}, {{Fully Relativistic Particle}} in {{Cell Code}} for {{Modeling Plasma Based Accelerators}}},
+  shorttitle = {{{OSIRIS}}},
+  booktitle = {Computational {{Science}} \textemdash{} {{ICCS}} 2002},
+  author = {Fonseca, R. A. and Silva, L. O. and Tsung, F. S. and Decyk, V. K. and Lu, W. and Ren, C. and Mori, W. B. and Deng, S. and Lee, S. and Katsouleas, T. and Adam, J. C.},
+  editor = {Goos, Gerhard and Hartmanis, Juris and Van Leeuwen, Jan and Sloot, Peter M. A. and Hoekstra, Alfons G. and Tan, C. J. Kenneth and Dongarra, Jack J.},
+  year = {2002},
+  volume = {2331},
+  pages = {342--351},
+  publisher = {{Springer Berlin Heidelberg}},
+  address = {{Berlin, Heidelberg}},
+  doi = {10.1007/3-540-47789-6_36},
+  urldate = {2023-09-28},
+  isbn = {978-3-540-43594-5 978-3-540-47789-1},
+  file = {/Users/timmis/Zotero/storage/FFDXRUSV/Fonseca et al. - 2002 - OSIRIS A Three-Dimensional, Fully Relativistic Pa.pdf}
+}
+
 @article{fornalskiSimpleEmpiricalCorrection2018,
   title = {Simple Empirical Correction Functions to Cross Sections of the Photoelectric Effect, {{Compton}} Scattering, Pair and Triplet Production for Carbon Radiation Shields for Intermediate and High Photon Energies},
   author = {Fornalski, Krzysztof W},
@@ -1008,6 +1047,23 @@
   doi = {10.1364/OE.19.008486},
   urldate = {2023-09-20},
   langid = {english}
+}
+
+@article{fryxellFLASHAdaptiveMesh2000,
+  title = {{{FLASH}}: {{An Adaptive Mesh Hydrodynamics Code}} for {{Modeling Astrophysical Thermonuclear Flashes}}},
+  shorttitle = {{{FLASH}}},
+  author = {Fryxell, B. and Olson, K. and Ricker, P. and Timmes, F. X. and Zingale, M. and Lamb, D. Q. and MacNeice, P. and Rosner, R. and Truran, J. W. and Tufo, H.},
+  year = {2000},
+  month = nov,
+  journal = {The Astrophysical Journal Supplement Series},
+  volume = {131},
+  number = {1},
+  pages = {273--334},
+  issn = {0067-0049, 1538-4365},
+  doi = {10.1086/317361},
+  urldate = {2023-09-28},
+  langid = {english},
+  file = {/Users/timmis/Zotero/storage/L2BZYZWT/Fryxell et al. - 2000 - FLASH An Adaptive Mesh Hydrodynamics Code for Mod.pdf}
 }
 
 @article{galesExtremeLightInfrastructure2018,
@@ -1704,6 +1760,21 @@
   abstract = {Particle acceleration is a process of great importance in all areas of plasma physics. In most cases, kinetic effects are dominant and require a full kinetic treatment, such as the particle in cell (PIC) method. PIC methods are widely used in all aspects of plasma physics, proving to be a precious and irreplaceable tool. Yet all methods in use and published conserve energy to a good approximation, but not exactly. A well known property of PIC methods, documented extensively in all textbooks, is that energy is not conserved exactly. In fact, the particle noise is a unphysical source of energy that, when insufficient resolution is used, can make the simulations go unstable. In the present paper, we apply a new exactly energy conserving scheme and demonstrate that indeed exact energy conservation plays a key role in determining the correct spectrum of the accelerated particles.},
   langid = {english},
   file = {/Users/timmis/Zotero/storage/BXU6G5XR/Lapenta and Markidis - 2011 - Particle acceleration and energy conservation in p.pdf}
+}
+
+@article{larsenHYADESPlasmaHydrodynamics1994,
+  title = {{{HYADES}}\textemdash{{A}} Plasma Hydrodynamics Code for Dense Plasma Studies},
+  author = {Larsen, Jon T. and Lane, Stephen M.},
+  year = {1994},
+  month = jan,
+  journal = {Journal of Quantitative Spectroscopy and Radiative Transfer},
+  volume = {51},
+  number = {1-2},
+  pages = {179--186},
+  issn = {00224073},
+  doi = {10.1016/0022-4073(94)90078-7},
+  urldate = {2023-09-28},
+  langid = {english}
 }
 
 @misc{LaserSystemGemini,
@@ -2625,6 +2696,22 @@
   file = {/Users/timmis/Zotero/storage/QS8RHD48/Singh et al. - 2021 - Bremsstrahlung emission and plasma characterizatio.pdf}
 }
 
+@article{sircombeVALISSplitconservativeScheme2009,
+  title = {{{VALIS}}: {{A}} Split-Conservative Scheme for the Relativistic {{2D Vlasov}}\textendash{{Maxwell}} System},
+  shorttitle = {{{VALIS}}},
+  author = {Sircombe, N.J. and Arber, T.D.},
+  year = {2009},
+  month = jul,
+  journal = {Journal of Computational Physics},
+  volume = {228},
+  number = {13},
+  pages = {4773--4788},
+  issn = {00219991},
+  doi = {10.1016/j.jcp.2009.03.029},
+  urldate = {2023-09-28},
+  langid = {english}
+}
+
 @article{skantzakisCoherentContinuumExtreme2009,
   title = {Coherent Continuum Extreme Ultraviolet Radiation in the Sub-100-{{nJ}} Range Generated by a High-Power Many-Cycle Laser Field},
   author = {Skantzakis, E. and Tzallas, P. and Kruse, J. and Kalpouzos, C. and Charalambidis, D.},
@@ -3036,12 +3123,19 @@
   file = {/Users/timmis/Zotero/storage/Y2Y2GJ2M/Tsai et al. - 2015 - Compact tunable Compton x-ray source from laser-pl.pdf}
 }
 
-@article{umstadterRelativisticLaserPlasma,
-  title = {Relativistic Laser\textendash Plasma Interactions},
+@article{umstadterRelativisticLaserPlasma2003a,
+  title = {Relativistic Laser Plasma Interactions},
   author = {Umstadter, Donald},
-  abstract = {By focusing petawatt peak power laser light to intensities up to 1021 W cm-2, highly relativistic plasmas can now be studied. The force exerted by light pulses with this extreme intensity has been used to accelerate beams of electrons and protons to energies of a million volts in distances of only microns. This acceleration gradient is a thousand times greater than in radio-frequency-based accelerators. Such novel compact laser-based radiation sources have been demonstrated to have parameters that are useful for research in medicine, physics and engineering. They might also someday be used to ignite controlled thermonuclear fusion. Ultrashort pulse duration particles and x-rays that are produced can resolve chemical, biological or physical reactions on ultrafast (femtosecond) timescales and on atomic spatial scales. These energetic beams have produced an array of nuclear reactions, resulting in neutrons, positrons and radioactive isotopes. As laser intensities increase further and laser-accelerated protons become relativistic, exotic plasmas, such as dense electron\textendash positron plasmas, which are of astrophysical interest, can be created in the laboratory. This paper reviews many of the recent advances in relativistic laser\textendash plasma interactions.},
-  langid = {english},
-  file = {/Users/timmis/Zotero/storage/UYBIX766/Umstadter - Relativistic laser–plasma interactions.pdf}
+  year = {2003},
+  month = apr,
+  journal = {Journal of Physics D: Applied Physics},
+  volume = {36},
+  number = {8},
+  pages = {R151-R165},
+  issn = {0022-3727, 1361-6463},
+  doi = {10.1088/0022-3727/36/8/202},
+  urldate = {2023-09-27},
+  file = {/Users/timmis/Zotero/storage/TCVXEF5Z/Umstadter - 2003 - Relativistic laser plasma interactions.pdf}
 }
 
 @misc{Units,
@@ -3432,6 +3526,21 @@
   abstract = {We present a recent progress of the SG-II 5PW facility, which designed a multi-petawatt ultrashort pulse laser based on optical parametric chirped-pulse amplification (OPCPA). The prior two optical parametric amplifiers have been accomplished and chirped pulses with an energy of 49.7 J and a full-width-at-half-maximum (FWHM) spectrum bandwidth of 85 nm have been achieved. In the PW-scale optical parametric amplification (OPA), with the pump pulse that has an energy of 118 J from the second harmonic generation of the SG-II 7th beam, the pump-to-signal conversion efficiency is up to 41.9\%, which to the best of our knowledge is the highest among all of the reported values for OPCPA systems. The compressed pulse is higher than 37 J in 21 fs (1.76 PW), and the focal spot is {$\sim$}10 \textmu m after the closed-loop corrections by the adaptive optics. Limited by the repetition of the pump laser, the SG-II 5PW facility operates one shot per hour. It has successfully been employed for high energy physics experiments.},
   langid = {english},
   file = {/Users/timmis/Zotero/storage/IA8EVMVM/Zhu et al. - 2018 - Analysis and construction status of SG-II 5PW lase.pdf}
+}
+
+@article{zouDesignCurrentProgress2015,
+  title = {Design and Current Progress of the {{Apollon}} 10 {{PW}} Project},
+  author = {Zou, J.P. and Le Blanc, C. and Papadopoulos, D.N. and Ch{\'e}riaux, G. and Georges, P. and Mennerat, G. and Druon, F. and Lecherbourg, L. and Pellegrina, A. and Ramirez, P. and Giambruno, F. and Fr{\'e}neaux, A. and Leconte, F. and Badarau, D. and Boudenne, J.M. and Fournet, D. and Valloton, T. and Paillard, J.L. and Veray, J.L. and Pina, M. and Monot, P. and Chambaret, J.P. and Martin, P. and Mathieu, F. and Audebert, P. and Amiranoff, F.},
+  year = {2015},
+  journal = {High Power Laser Science and Engineering},
+  volume = {3},
+  pages = {e2},
+  issn = {2095-4719, 2052-3289},
+  doi = {10.1017/hpl.2014.41},
+  urldate = {2023-09-28},
+  abstract = {The objective of the Apollon project is the generation of 10 PW peak power pulses of 15 fs at 1~shot/minute. In this paper the Apollon facility design, the technological challenges and the current progress of the project will be presented.},
+  langid = {english},
+  file = {/Users/timmis/Zotero/storage/UQ5AVHUH/Zou et al. - 2015 - Design and current progress of the Apollon 10 PW p.pdf}
 }
 
 @article{zulickHighResolutionBremsstrahlung2013,
