--- a/text/ch1-intro.tex
+++ b/text/ch1-intro.tex
@@ -33,6 +33,36 @@ There is no one who loves pain itself, who seeks after it and wants to have it, 
 %Assume for now that the ion-electron mass ratio is infinite, that is to say the ions are approximately immobile for the timescales under consideration, generally true for a fair few relativistic laser pulse cycles (In later sections the mobility of plasma ions will prove very important but for now this is ignored.).
 % I should also discuss ionisation and laser surface plasma interaction?/
 
+\section{To do}
+
+\begin{enumerate}
+	\item HYADES simulations
+	\item Add more citations
+	\item Similarity theory
+	\item Add details on CPA and OPCPA
+	\item Simulation algorithms (details in appendix?)
+	\item Velocity transformations derivation (appendix)
+	\item Sources of error system
+	\item Ponderomotive heating mechanisms
+	\item Fix QED section
+	\item Particle merging
+	\item Radiating particles and relativistic larmor radius
+	\item smieli performance plot
+\end{enumerate}
+
+On the ZVP front
+\begin{enumerate}
+	\item Go through derivations
+	\item Fix diagrams
+	\item Go through discussions
+	\item Add errrors plot
+	\item Check out new sims
+	\item Conclusion
+	\item Shape of transverse momentum (more parabolic compared to linear and explanaition of bunch holding together), Shrp front edge then parabolic (or even exponential decay - it is defo expoenential)
+	\item Editing
+\end{enumerate}
+
+
 
 \section{High-energy-density physics}
 We sit on the verge of the exa-scale revolution both in terms of computing \cite{kotheExascaleComputingUnited2019} and laser power. With rapid adoption of the pioneering advancements of Chirped Pulse Amplification (CPA) by Strickland and Mourou \cite{stricklandCompressionAmplifiedChirped1985} and of Optical Parametric Chirped Pulse Amplification \cite{rossOpticalParametricChirped2000}, multi-petawatt facilities have now been commissioned and built across the globe and plans for sub-exawatt facilities are underway. Figure \ref{fig:intro_lasersystems} details the parameter space accessible by current and proposed facilities \cite{stricklandCompressionAmplifiedChirped1985, fourmauxPedestalCleaningHigh2011, wang085PWLaser2017, tiscarenoOhioStateUniversity2020, sung42PW202017, rossGenerationTerawattPulses2000, yangMultiterawattLaserSystem2002, witte2006source, stoecklHighEnergyPetawattProject2006, lozhkarevCompact56Petawatt2007, herrmannGenerationSubthreecycle162009, andriukaitis90GWPeak2011, zhaoGeneration120GW2013, hoppsOverviewLaserSystems2013, hoppsOverviewLaserSystems2013, thire10MJ5cycle2015, yinHighefficiencyOpticalParametric2016, galesExtremeLightInfrastructure2018, OMEGAFacility, renCompactDoublepassRaman2008, lanciaExperimentalEvidenceShort2010, lanciaSignaturesSelfSimilarRegime2016, marquesJouleLevelHighEfficiencyEnergy2019, thebergeTunableUltrashortLaser2006, trushinSub10fsSupercontinuumRadiation2007, ohIntenseTerahertzGeneration2013, horioGenerationSub17Fs2014, takahashiGeneration10uJCoherent2002, goulielmakisSingleCycleNonlinearOptics2008, skantzakisCoherentContinuumExtreme2009, ferrariHighenergyIsolatedAttosecond2010, takahashiAttosecondNonlinearOptics2013, popmintchevUltravioletSurpriseEfficient2015, nomuraAttosecondPhaseLocking2009, bierbachGeneration10Relativistic2012, heisslerMultimJHarmonicEmission2015, yeungExperimentalObservationAttosecond2017, jahnIntenseIsolatedAttosecond2019, rusEfficientHighbrightnessSoftxray1997, sebbanFullCharacterizationHighgain2000, rusMultimillijouleHighlyCoherent2002, zeitounHighintensityHighlyCoherent2004, wangHighBrightnessInjectionSeededSoftXRayLaser2006, rohringerAtomicInnershellXray2012, ayvazyanFirstOperationFreeelectron2006, ackermannOperationFreeelectronLaser2007, emmaFirstLasingOperation2010, FlashFreeElectronLaser, FlashFreeElectronLaser, FELIXLaboratoryOverview, FELIXLaboratoryOverview, FELIXLaboratoryOverview, kneipObservationSynchrotronRadiation2008, kneipBrightSpatiallyCoherent2010, juEnhancementXraysGenerated2012, chenBrightBetatronXray2013, wangQuasimonoenergeticLaserplasmaAcceleration2013, coleLaserwakefieldAcceleratorsHard2015, wenzQuantitativeXrayPhasecontrast2015, taphuocAllopticalComptonGammaray2012, chenMeVEnergyRaysInverse2013, tsaiCompactTunableCompton2015, polyanskiyPicosecondPulseAmplification2011, haberbergerFifteenTerawattPicosecond2010, glowniaAmplification193nmFemtosecond1992, kandoEnhancementPhotonNumber2009, obenschainHighenergyKryptonFluoride2015, trinesSimulationsEfficientRaman2011, trinesSimulationsEfficientRaman2011, kawanakaConceptualDesignSubexawatt2016, tajimaMarriage20keVSuperconducting2018}, clearly, there is no indication of wavering interest or support for the field of \ac{HED} physics. 
@@ -40,8 +70,7 @@ We sit on the verge of the exa-scale revolution both in terms of computing \cite
 \begin{figure}
 	\centering
 	\includegraphics[width=\linewidth]{figures/intro/laser_systems}
-	\caption[Laser systems across the globe, both commissioned and theorised.]{A by no means exhaustive plot of laser systems across the globe, both commissioned and theorised \cite{stricklandCompressionAmplifiedChirped1985, fourmauxPedestalCleaningHigh2011, wang085PWLaser2017, tiscarenoOhioStateUniversity2020, sung42PW202017, rossGenerationTerawattPulses2000, yangMultiterawattLaserSystem2002, witte2006source, stoecklHighEnergyPetawattProject2006, lozhkarevCompact56Petawatt2007, herrmannGenerationSubthreecycle162009, andriukaitis90GWPeak2011, zhaoGeneration120GW2013, hoppsOverviewLaserSystems2013, hoppsOverviewLaserSystems2013, thire10MJ5cycle2015, yinHighefficiencyOpticalParametric2016, galesExtremeLightInfrastructure2018, OMEGAFacility, renCompactDoublepassRaman2008, lanciaExperimentalEvidenceShort2010, lanciaSignaturesSelfSimilarRegime2016, marquesJouleLevelHighEfficiencyEnergy2019, thebergeTunableUltrashortLaser2006, trushinSub10fsSupercontinuumRadiation2007, ohIntenseTerahertzGeneration2013, horioGenerationSub17Fs2014, takahashiGeneration10uJCoherent2002, goulielmakisSingleCycleNonlinearOptics2008, skantzakisCoherentContinuumExtreme2009, ferrariHighenergyIsolatedAttosecond2010, takahashiAttosecondNonlinearOptics2013, popmintchevUltravioletSurpriseEfficient2015, nomuraAttosecondPhaseLocking2009, bierbachGeneration10Relativistic2012, heisslerMultimJHarmonicEmission2015, yeungExperimentalObservationAttosecond2017, jahnIntenseIsolatedAttosecond2019, rusEfficientHighbrightnessSoftxray1997, sebbanFullCharacterizationHighgain2000, rusMultimillijouleHighlyCoherent2002, zeitounHighintensityHighlyCoherent2004, wangHighBrightnessInjectionSeededSoftXRayLaser2006, rohringerAtomicInnershellXray2012, ayvazyanFirstOperationFreeelectron2006, ackermannOperationFreeelectronLaser2007, emmaFirstLasingOperation2010, FlashFreeElectronLaser, FlashFreeElectronLaser, FELIXLaboratoryOverview, FELIXLaboratoryOverview, FELIXLaboratoryOverview, kneipObservationSynchrotronRadiation2008, kneipBrightSpatiallyCoherent2010, juEnhancementXraysGenerated2012, chenBrightBetatronXray2013, wangQuasimonoenergeticLaserplasmaAcceleration2013, coleLaserwakefieldAcceleratorsHard2015, wenzQuantitativeXrayPhasecontrast2015, taphuocAllopticalComptonGammaray2012, chenMeVEnergyRaysInverse2013, tsaiCompactTunableCompton2015, polyanskiyPicosecondPulseAmplification2011, haberbergerFifteenTerawattPicosecond2010, glowniaAmplification193nmFemtosecond1992, kandoEnhancementPhotonNumber2009, obenschainHighenergyKryptonFluoride2015, trinesSimulationsEfficientRaman2011, trinesSimulationsEfficientRaman2011, kawanakaConceptualDesignSubexawatt2016, tajimaMarriage20keVSuperconducting2018, NetElectricityConsumption, umstadterRelativisticLaserPlasma2003} to provide an overview of the parameter space currently and soon to be accessible. The experimental result obtained at the ORION laser facility \cite{hoppsOverviewLaserSystems2013} is presented, and will be discussed in detail in chapter \ref{ch:3-ORION}. The dashed orange line is the accompanying theoretical prediction. The red dashed line indicates the parameter space accessible via the methods discussed in this thesis when coupled with a sub-etawatt Raman amplified laser beam. Such a beam would provide intensities in the water window many orders of magnitude beyond that currently accessible in state-of-the-art facilities. }
-
+	\caption[Laser systems across the globe, both commissioned and theorised.]{A by no means exhaustive plot of laser systems across the globe, both commissioned and theorised \cite{stricklandCompressionAmplifiedChirped1985, fourmauxPedestalCleaningHigh2011, wang085PWLaser2017, tiscarenoOhioStateUniversity2020, sung42PW202017, rossGenerationTerawattPulses2000, yangMultiterawattLaserSystem2002, witte2006source, stoecklHighEnergyPetawattProject2006, lozhkarevCompact56Petawatt2007, herrmannGenerationSubthreecycle162009, andriukaitis90GWPeak2011, zhaoGeneration120GW2013, hoppsOverviewLaserSystems2013, hoppsOverviewLaserSystems2013, thire10MJ5cycle2015, yinHighefficiencyOpticalParametric2016, galesExtremeLightInfrastructure2018, OMEGAFacility, renCompactDoublepassRaman2008, lanciaExperimentalEvidenceShort2010, lanciaSignaturesSelfSimilarRegime2016, marquesJouleLevelHighEfficiencyEnergy2019, thebergeTunableUltrashortLaser2006, trushinSub10fsSupercontinuumRadiation2007, ohIntenseTerahertzGeneration2013, horioGenerationSub17Fs2014, takahashiGeneration10uJCoherent2002, goulielmakisSingleCycleNonlinearOptics2008, skantzakisCoherentContinuumExtreme2009, ferrariHighenergyIsolatedAttosecond2010, takahashiAttosecondNonlinearOptics2013, popmintchevUltravioletSurpriseEfficient2015, nomuraAttosecondPhaseLocking2009, bierbachGeneration10Relativistic2012, heisslerMultimJHarmonicEmission2015, yeungExperimentalObservationAttosecond2017, jahnIntenseIsolatedAttosecond2019, rusEfficientHighbrightnessSoftxray1997, sebbanFullCharacterizationHighgain2000, rusMultimillijouleHighlyCoherent2002, zeitounHighintensityHighlyCoherent2004, wangHighBrightnessInjectionSeededSoftXRayLaser2006, rohringerAtomicInnershellXray2012, ayvazyanFirstOperationFreeelectron2006, ackermannOperationFreeelectronLaser2007, emmaFirstLasingOperation2010, FlashFreeElectronLaser, FlashFreeElectronLaser, FELIXLaboratoryOverview, FELIXLaboratoryOverview, FELIXLaboratoryOverview, kneipObservationSynchrotronRadiation2008, kneipBrightSpatiallyCoherent2010, juEnhancementXraysGenerated2012, chenBrightBetatronXray2013, wangQuasimonoenergeticLaserplasmaAcceleration2013, coleLaserwakefieldAcceleratorsHard2015, wenzQuantitativeXrayPhasecontrast2015, taphuocAllopticalComptonGammaray2012, chenMeVEnergyRaysInverse2013, tsaiCompactTunableCompton2015, polyanskiyPicosecondPulseAmplification2011, haberbergerFifteenTerawattPicosecond2010, glowniaAmplification193nmFemtosecond1992, kandoEnhancementPhotonNumber2009, obenschainHighenergyKryptonFluoride2015, trinesSimulationsEfficientRaman2011, trinesSimulationsEfficientRaman2011, kawanakaConceptualDesignSubexawatt2016, tajimaMarriage20keVSuperconducting2018, NetElectricityConsumption, umstadterRelativisticLaserPlasma2003a} to provide an overview of the parameter space currently and soon to be accessible. The experimental result obtained at the ORION laser facility \cite{hoppsOverviewLaserSystems2013} is presented, and will be discussed in detail in chapter \ref{ch:3-ORION}. The dashed orange line is the accompanying theoretical prediction. The red dashed line indicates the parameter space accessible via the methods discussed in this thesis when coupled with a sub-etawatt Raman amplified laser beam. Such a beam would provide intensities in the water window many orders of magnitude beyond that currently accessible in state-of-the-art facilities. }
 	\label{fig:intro_lasersystems}
 \end{figure}
 
@@ -81,7 +110,7 @@ As outlined in F. Chen's definitive textbook `Introduction to Plasma Physics and
 \begin{enumerate}
 	\item Ionisation: a plasma must consist of both charged and neutral particles, of course this alone cannot define a plasma, any gas will contain some degree of ionisation, however, with reference to figure \ref{fig:intro_lasersystems}, clearly, modern high power laser systems will instantaneously fully ionise a target upon incidence;
 	\item Quasineutrality: while locally there can be (often extreme) electromagnetic forces and charge concentrations at work, over the length scales of the plasma, such forces are screened out and the plasma bulk remains net neutral in charge;
-	\item Collective behaviour: unlike in a gas, where collisions will dominate the dynamics, the particles in a plasma generate electromagnetic fields that interact at a distance and thus a particle's motion depends not only on its immediate vicinity but on the surrounding plasma conditions, indeed often it is the so-called `collisionless' plasmas where collisions can be safely neglected that are of most interest, as is the focus of this thesis.
+	\item Collective behaviour: unlike in a gas, where collisions will dominate the dynamics, the particles in a plasma generate electromagnetic fields that interact at a distance and thus a particle's motion depends not only on its immediate vicinity but on the surrounding plasma conditions, indeed often it is the so-called \textit{collisionless} plasmas where collisions can be safely neglected that are of most interest, as is the focus of this thesis.
 \end{enumerate}
 
 These conditions can be quantitatively described by the Debye length, the plasma parameter and the plasma frequency as laid out in the following sections.
@@ -287,7 +316,7 @@ Relativistic effects occur. Intruce the normalised a0, then introduce the S
 
 
 
-The descriptor `Relativistic' is applied liberally in this thesis. When applied to electromagnetic fields or laser pulses it refers to 
+The descriptor \textit{relativistic} is applied liberally in this thesis. When applied to electromagnetic fields or laser pulses it refers to 
 \begin{equation}
 	a_0 \ge 1.
 \end{equation}
@@ -329,7 +358,7 @@ Consider a linearly polarised Gaussian laser pulse, with axis of polarisation al
 \end{equation}
 where $p_\mathrm{T}$ is the electron momentum along the polarisation axis of the laser pulse and $A$ it the laser pulse 3-vector potential amplitude.
 
-Note that this is only valid provided the electron does not radiate along the direction of polarisation as discussed by Sokolov \textit{et al} \cite{sokolovDynamicsEmittingElectrons2009}. The implications of `Radiation Reaction' are discussed in the following section.
+Note that this is only valid provided the electron does not radiate along the direction of polarisation as discussed by Sokolov \textit{et al} \cite{sokolovDynamicsEmittingElectrons2009}. The implications of \textit{Radiation Reaction }are discussed in the following section.
 
 \section{QED effects}
 We are now at the cusp of \ac{SF-QED} laser-plasma physics. Access to this regime will enable the testing of decades old theoretical predictions. Already Fedeli \textit{et al} have shown in simulations that current PW-class laser facilities can access the regime using an all-optical set up based on laser-solid surface interactions \cite{fedeliProbingStrongfieldQED2020}. The primary two SF-QED phenomena to be accessed are Radiation Reaction and multi-photon Breit-Wheeler electron pair production. Brief introductions to these phenomena are now presented.
@@ -370,21 +399,21 @@ The chi parameter will change rapidly once the transition to QED ZVP has occured
 
 
 \section{Simulating the interaction}
-Modelling laser-plasma interactions is notoriously challenging; due to the complexity of the many-bodied system and the stochasticity of particle motion, it is frequently impossible to construct models \textit{ab initio}. Instead, hydrodynamic simulation codes such as HYADES \textbf{CITE} and Particle-In-Cell simulation codes such as Smilei \cite{derouillatSmileiCollaborativeOpensource2018}, Osiris\textbf{ \cite{bibid}} and EPOCH are used to construct phenomenological models and to direct experimentation. 
+Modelling laser-plasma interactions is a notoriously challenging endeavour; due to the complexity of the many-bodied systems involved (a fully ionised centimetre cubed block of plastic contains on the order of $10^23$ particles) and the stochasticity of particle motion, it is frequently impossible to construct models \textit{ab initio}. Instead, hydrodynamic simulation codes such as HYADES \cite{larsenHYADESPlasmaHydrodynamics1994} and FLASH \cite{fryxellFLASHAdaptiveMesh2000} and Particle-In-Cell simulation codes such as Smilei \cite{derouillatSmileiCollaborativeOpensource2018}, Osiris \cite{fonsecaOSIRISThreeDimensionalFully2002} and EPOCH \cite{bennett2017users} are used to construct phenomenological models and to direct experimentation. 
+
+
+\subsection{Supercomputing resources}\label{sec:intro-archer}
+Modern \ac{HPC} systems are poised to enter the exascale regime ($> 10^{18}$ Floating Point Operations Per Second). With limited improvements in microprocessor technologies, such power is achieved through massive parallelisation across processing units. To enable the study of the dynamics of up to billions of macroparticles, PIC codes test the limits of current supercomputing architectures. ARCHER2, the UK's national supercomputer came online in November 2021, with it delivering over ten times the reseources of its predecessor (ARCHER) \cite{ARCHER2}. An HPE Cray EX supercomputing system with a peak performance estimated at \qty{28}{Pflops.s^{-1}} across 5860 nodes each with dual AMD EPYCTM 7742 64-core processor for a total of 750,080 cores, ARCHER2 was able to supply the resources required to run the costly PIC simulations for this research. The substantially cheaper HYADES simulations were performed using the Rutherford Appleton Laboratory's SCARF \ac{HPC} cluster \cite{SCARFOverview}.
 
 \subsection{Particle-In-Cell codes}
-
-\textbf{Other considerations:(At some point list all the other sources of potential error, including ignoring ionisation, ionisation states, collisions.)}
-I think put this in the main intro section. Then start PIC codes with discretisation of the Vlasov-Maxwell system of equations.
-
 \subsubsection{The Vlasov-Maxwell system of equations}
 A collisionless and fully ionised plasma is fully described in the kinetic description by the Vlasov-Maxwell system of equations \cite{derouillatSmileiCollaborativeOpensource2018}. Each plasma species, $s$, of particles with mass $m_s$ and charge $q_s$ is described by its distribution function $f_s(t,\mathbf{x},\mathbf{p})$ at time $t$, position $\mathbf{x}$ and momentum $\mathbf{p} = m_s \gamma \mathbf{v}$. The distribution satisfies the Vlasov equation, that is,
 \begin{equation}
 	(\partial_t + \frac{\mathbf{p}}{m_s\gamma} \cdot \nabla + \mathbf{F}_\mathrm{L} \cdot \nabla_\mathbf{p})f_s = 0,
 \end{equation}
-where $\mathbf{F}_\mathrm{L}$ is given in equation \ref{eq:intro-Lorentz_force}. The electric $\mathbf{E}(t,\mathbf{x})$ and magnetic $\mathbf{B}(t,\mathbf{x})$ fields that generate the force must satisfy Maxwell's equations(equation \ref{eq:intro-maxwell}).
+where $\mathbf{F}_\mathrm{L}$ is the Lorentz force given in equation \ref{eq:intro-Lorentz_force}. The electric $\mathbf{E}(t,\mathbf{x})$ and magnetic $\mathbf{B}(t,\mathbf{x})$ fields that generate the force must satisfy Maxwell's equations (equations \ref{eq:intro-maxwell}).
 
-This self-consistent system of equations describes the dynamics of plasma particles within electromagnetic fields. The particles then modify the fields via their charge and current densities,
+This self-consistent system of equations describes the dynamics of plasma particles within electromagnetic fields. The particles modify the fields via their charge and current densities,
 \begin{equation}
 	\rho(t,\mathbf{x}) = \sum_s q_s \int d^3pf_s(t,\mathbf{x},\mathbf{p}),
 \end{equation}
@@ -395,11 +424,11 @@ and
 respectively.
 
 \subsubsection{Discretisation of the Vlasov-Maxwell equations}
-Finding numerical solutions to the Vlasov-Maxwell equations is no straightforward task, there are codes that are capable such as Valis \textbf{**CITE**}, however, the requirement of high resolution in both position and momentum is exceedingly costly and use of such codes are limited in their size, duration and spatial dimensions. A more tractable approach is to discretise the distribution function into $N_s$ `quasi-particles'\footnote{Originally introduced by Langdon and Birdsall as `clouds' \cite{langdonTheoryPlasmaSimulation1970}.} . There are often referred to as `macro-particles' in practice and typically represent a large number of real particles, such that
+Finding numerical solutions to the Vlasov-Maxwell equations is no straightforward task, while codes exist that are capable, such as Valis \cite{sircombeVALISSplitconservativeScheme2009}, the requirement of high resolution in both position and momentum is exceedingly costly and the use of such codes is limited with respect to their size, duration and spatial dimensions. A more tractable approach is to discretise the distribution function into $N_s$ \textit{quasi-particles}\footnote{Originally introduced by Langdon and Birdsall as \textit{clouds} \cite{langdonTheoryPlasmaSimulation1970}.} . These are often referred to as \textit{macro-particles} in practice and typically represent a large number of real particles, such that
 \begin{equation}
 	f_s(t,\mathbf{x},\mathbf{p}) = \sum^{N_s}_{p=1} w_p S(\mathbf{x}-\mathbf{x}_p(t))\delta (\mathbf{p}-\mathbf{p}_p(t)),
 \end{equation}
-where $w_p$ is the quasi-particle's weight, $\mathbf{x}_p$ and $\mathbf{p}_p$ are its position and momentum respectively, $\delta$ is the Dirac-delta distribution and $S(\mathbf{x})$ the shape-function chosen to represent the quasi-particle. The Vlasov equation is then integrated along the continuous trajectories of the quasi-particles while Maxwell's equations are solved on a discrete spatial grid of `cells'. Such a code is aptly named a `\ac{PIC}' code. A schematic of the PIC code algorithm is presented in figure \ref{fig:intropiccycle-01}. 
+where $w_p$ is the quasi-particle's weight, $\mathbf{x}_p$ and $\mathbf{p}_p$ are its position and momentum respectively, $\delta$ is the Dirac-delta distribution and $S(\mathbf{x})$ the shape-function chosen to represent the quasi-particle. The Vlasov equation is then integrated along the continuous trajectories of the quasi-particles while Maxwell's equations are solved on a discrete spatial grid of \textit{cells}. Such a code is aptly named a\textit{ Particle-In-Cell} (PIC) code. A schematic of the standard PIC code algorithm is presented in figure \ref{fig:intropiccycle-01}. 
 % TODO: \usepackage{graphicx} required
 \begin{figure}
 	\centering
@@ -407,26 +436,18 @@ where $w_p$ is the quasi-particle's weight, $\mathbf{x}_p$ and $\mathbf{p}_p$ ar
 	\caption[A schematic of the PIC code loop and the algorithms performed.]{A schematic of the PIC code loop and the algorithms performed from time step, $ts$, from $n$ to $n+1$.}
 	\label{fig:intropiccycle-01}
 \end{figure}
-After initialising particles, Maxwell's equations are solved with the \ac{FDTD} approach \cite{tafloveComputationalElectromagneticsFiniteDifference2005} where electromagnetic fields are discretised the staggered `Yee grid' as represented in figure \ref{fig:introyeegrid}. This ensures 
-% TODO: \usepackage{graphicx} required
+After particle and field initialisation, fields are interpolated at particle positions. The well-established momentum-conserving \textit{Boris pusher} algorithm computes the new macro-particle velocities and positions \cite{borisRelativisticPlasmaSimulationoptimization1970}. Particles are advanced in time using a \textit{leap-frog }scheme, where positions are defined at integer, $n$, time steps and momenta at half integer, $n + 1/2$. The charge conserving Esirkepov algorithm \cite{esirkepovExactChargeConservation2001} projects the new charge and current densities onto the grid to then solve Maxwell's equations on the grid using the Finite-Difference-Time-Domain approach \cite{tafloveComputationalElectromagneticsFiniteDifference2005}. To ensure space and time centering of the electromagnetic field derivatives in Maxwell's equations, electric and magnetic fields are discretised on the staggered \textit{Yee grid} as represented in figure \ref{fig:introyeegrid}. 
 \begin{figure}
 	\centering
 	\includegraphics[width=0.7\linewidth]{figures/intro/intro_yee_grid}
-	\caption[A representation of the staggered Yee grid for efficient curl calculations.]{A representation of the staggered 3D Yee grid for the cell at $(i\Delta x, j\Delta y, k\Delta z)$ for efficient curl calculations, including the locations where all system properties are defined.}
+	\caption[A representation of the staggered Yee grid.]{A representation of the staggered 3D Yee grid for the cell at $(i\Delta x, j\Delta y, k\Delta z)$ for spatial centering of the curl operations, including the locations where all system properties are defined.}
 	\label{fig:introyeegrid}
 \end{figure}
-
-HMM Im confused... read langdon maybe and redo this section then?
-
-To ensure space and time centering of the electromagnetic field derivatives in Maxwell's equations, electric and magnetic fields are discretised on the staggered `Yee grid'. Electric fields are defined at integer time steps, $n$ while magnetic fields at half-integeter ($n + 1/2$) time steps. Note, for the particle pusher it is also required that the magnetic fields also be defined at integer steps. Particles are advanced in time using a `leap-frog' scheme, where positions are defined at integer timesteps and momenta at half integer.
-
-Using a momentum and charge conserving scheme (cite Esekipov sheme for charge conservation used by Smilei.).
-
-Well known Boris pusher
+with electric fields defined at integer time steps and magnetic fields at half-integer time steps.
 
 
 \subsubsection{Smilei}
-Smilei (for Simulating Matter Irradiated by Light at Extreme Intensities) is a modern collaborative, massively-parallel, fully relativistic and open source plasma physics PIC code and was the main workhorse for this thesis\footnote{At points benchmarks agaist the EPOCH and Osiris PIC codes were performed.}. Produced by M. Grech's team(CHECK THIS) at École Polytechnique \cite{derouillatSmileiCollaborativeOpensource2018}, its recent development was motivated by the rapid advancements of multi-petawatt facilities globally including their local Apollon laser and by the availability of supercomputing power which has `skyrocketed' in recent years \cite{derouillatSmileiCollaborativeOpensource2018}. Indeed, the 3D \ac{PIC} simulations discussed in this thesis required the parallelisation of almost 20 \% of the computing resources available on ARCHER2.
+Smilei (for Simulating Matter Irradiated by Light at Extreme Intensities) is a modern collaborative, massively-parallel, fully relativistic and open source plasma physics PIC code and the major workhorse for this thesis\footnote{At points benchmarks agaist the EPOCH and Osiris PIC codes were performed.}. Produced by M. Grech's team(CHECK THIS) at École Polytechnique \cite{derouillatSmileiCollaborativeOpensource2018}, its recent development was motivated by the rapid advancements of multi-petawatt facilities both globally and locally with the recent completion of the 10 PW Apollon laser facility and by the availability of supercomputing power which has `skyrocketed' in recent years \cite{derouillatSmileiCollaborativeOpensource2018}. Indeed, the 3D \ac{PIC} simulations discussed in this thesis required the parallelisation of almost 20 \% of the computing resources available on ARCHER2.
 
 
 \subsubsection{Reference quantities}
@@ -466,7 +487,7 @@ To great convenience, Smilei operates in normalised units. This normalisation is
 
 \subsubsection{General simulation parameters}\label{sec:intro-general_simulation_paramers}
 \textbf{Boundary conditions}
-"Silver-M$\ddot{\mathrm{u}}$ller" boundary conditions for the simulation box edges \textbf{cite - H Barucq Asymptomatic analysis 1997}. These are able to absorp and inject electromagnetic waves and particles. Note that there can be non-physical reflection of electromagnetic waves at such boundaries leading to error.
+\textit{Silver-M$\ddot{\mathrm{u}}$ller }boundary conditions for the simulation box edges \textbf{cite - H Barucq Asymptomatic analysis 1997}. These are able to absorp and inject electromagnetic waves and particles. Note that there can be non-physical reflection of electromagnetic waves at such boundaries leading to error.
 
 \textbf{Shape function} The quasi-particle shape function $S(\mathbf{x})$ describes how to project charge onto the grid. It is symmetric in all dimensions with respect to $\mathbf{x}$ and extends over $n$ cells of width $\Delta x$ in each direction where $n$ is the interpolation order. It can be written as a product across $D$ dimensions,
 \begin{equation}
@@ -492,11 +513,6 @@ Smilei implements orders 2, 3 and 4, the explicit shape functions are
 	\end{align}
 \end{subequations}
 
-\subsubsection{Parallelisation}
-Modern \ac{HPC} systems are poised to enter the exascale regime ($> 10^{18}$ Floating Point Operations Per Second). With limited improvements in microprocessor technologies, such power is achieved through massive parallelisation across processing units. To enable the study of the dynamics of up to billions of macroparticles, PIC codes test the limits of current supercomputing architectures. 
-
-\subsubsection{Supercomputing resources}\label{sec:intro-archer}
-ARCHER2, the UK's national supercomputer came online in November 2021, with it delivering over ten times the reseources of its predecessor (ARCHER) \cite{ARCHER2}. An HPE Cray EX supercomputing system with a peak performance estimated at \qty{28}{Pflops.s^{-1}} across 5860 nodes each with dual AMD EPYCTM 7742 64-core processor for a total of 750,080 cores, ARCHER2 was able to supply the resources required to run the costly PIC simulations for this research. The substantially cheaper HYADES simulations were performed using the Rutherford Appleton Laboratory's SCARF \ac{HPC} cluster \cite{SCARFOverview}.
 
 \subsubsection{Parallelisation in practice}
 In the following discussion, where differences in language occur, objects are given as their ARCHER2 (Smilei) names. The Smilei simulation box consists of a grid of cells as in figure \ref{fig:introsmileiparallelisation}.
@@ -507,11 +523,11 @@ In the following discussion, where differences in language occur, objects are gi
 	\caption[Smilei simulation box decomposition into cells, patches and MPI patch collections.]{Smilei simulation box decomposition into cells, patches and MPI patch collections. Cells are grouped into patches, patches are grouped into MPI patch collections. MPI patches are assigned contiguously along the Hilbert curve.}
 	\label{fig:introsmileiparallelisation}
 \end{figure}
-The box is decomposed into patches consisting of many cells. Patches are arranged into MPI patch collections assigned contiguously along a Hilbert curve.
+The box is decomposed into \textit{patches} consisting of many cells. Patches are arranged into \textit{MPI patch collections} assigned contiguously along a Hilbert curve.
 
-Archer consists of many CPUs (cores) that can each perform computational tasks. CPUs are grouped together into nodes. Memory is shared within a node such that all CPUs (cores) in a node can operate on the same data. When optimised, ARCHER2’s memory in each node is split into 8 sockets. These 8 sockets each perform a task (MPI process). Each task (MPI process) has 16 CPUs (cores) assigned that each perform a thread. A thread is a sequence of instructions from the program.
+Archer consists of many \textit{CPUs (cores)} that can each perform computational tasks. CPUs are grouped together into \textit{nodes}. Memory is shared within a node such that all CPUs (cores) in a node can operate on the same data. When optimised, ARCHER2’s memory in each node is split into 8 \textit{sockets}. These 8 sockets each perform a \textit{task (MPI process)}. Each task (MPI process) has 16 CPUs (cores) assigned that each perform a \textit{thread}. A thread is a sequence of instructions from the program.
 
-Each task (MPI process) handles one MPI patch collection. Threads work through patches. Figure \ref{fig:introsmileiparallelisationcomplex} represents this division of labour.
+Each task (MPI process) handles one \textit{MPI patch collection}. Threads work through patches. Figure \ref{fig:introsmileiparallelisationcomplex} represents this division of labour.
 % TODO: \usepackage{graphicx} required
 \begin{figure}
 	\centering
@@ -519,13 +535,18 @@ Each task (MPI process) handles one MPI patch collection. Threads work through p
 	\caption[Representation of the interaction of the ARCHER2 hardware and software components when running Smilei.]{Representation of the interaction of the ARCHER2 hardware and software components when running Smilei.}
 	\label{fig:introsmileiparallelisationcomplex}
 \end{figure}
-Threads do not need to wait for other threads in their process to tackle new patches in their MPI patch collection. This is a form of local dynamic load balancing. If an MPI patch collection is overloaded, a patch is offloaded to a contiguous MPI patch collection.
+Threads do not need to wait for other threads in their process to tackle new patches in their MPI patch collection. This is a form of local \textit{dynamic load balancing}. If an MPI patch collection is overloaded, a patch is offloaded to a contiguous MPI patch collection.
 
-There are several considerations for simulation optimisation, namely,
-\begin{itemize}
-	\item To apply the Hilbert curve, it is required that the number of patches in each dimension is a power of 2;
-	\item The less cells in a patch, the more efficient the load balancing, however, the cost of synchronisation between patches increases.;
-	\item Smaller patches are preferable when there are small regions with large numbers of particles, as in laser-solid surface interactions, however, the minimum patch size is dependent on the shape function of the macroparticles;
-	\item Tasks (MPI processes) should be assigned more patches than threads.
-\end{itemize}
+There are several considerations for simulation optimisation. Tasks (MPI processes) should always be assigned more patches than threads. To apply the Hilbert curve, it is necessary that the number of patches in each dimension is a power of 2. The less cells in a patch, the more efficient the load balancing, however, the cost of synchronisation between patches increases, although generally the gain in efficiency from load balancing by increasing patch number will win out at later times with increasing efficiency for increased frequency of load balancing \cite{derouillatSmileiCollaborativeOpensource2018}. Note that smaller patches are preferable when there are small regions with large numbers of particles, as in laser-solid surface interactions, however, the minimum patch size is dependent on the shape function of the macro-particles.
 
+\subsubsection{Sources of error inherent to PIC codes}
+
+\textbf{Other considerations:(At some point list all the other sources of potential error, including ignoring ionisation, ionisation states, collisions.)}
+
+Boris pusher
+
+Other Bits.
+
+
+
+Numerical heating, 
